tests/date/date.exp
Error ----------------------------------------------------------------------------------------------------- date.js:2:16

Cannot assign `d.getTime()` to `x` because number [1] is incompatible with string [2]. [incompatible-type]

   date.js:2:16
      2| var x:string = d.getTime(); // expect error
                        ^^^^^^^^^^^

References:
   <BUILTINS>/core.js:1367:16
   1367|     getTime(): number;
                        ^^^^^^ [1]
   date.js:2:7
      2| var x:string = d.getTime(); // expect error
               ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- date.js:4:16

Cannot assign `d` to `y` because `Date` [1] is incompatible with number [2]. [incompatible-type]

   date.js:4:16
   4| var y:number = d; // expect error
                     ^

References:
   date.js:1:9
   1| var d = new Date(0);
              ^^^^^^^^^^^ [1]
   date.js:4:7
   4| var y:number = d; // expect error
            ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- date.js:18:5

Cannot call `Date` because object literal [1] is incompatible with `Date` [2]. [incompatible-call]

   date.js:18:5
     18| new Date({});
             ^^^^

References:
   date.js:18:10
     18| new Date({});
                  ^^ [1]
   <BUILTINS>/core.js:1347:23
   1347|     constructor(date: Date): void;
                               ^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- date.js:19:5

Cannot call `Date` because string [1] is incompatible with number [2]. [incompatible-call]

   date.js:19:5
     19| new Date(2015, '6');
             ^^^^

References:
   date.js:19:16
     19| new Date(2015, '6');
                        ^^^ [1]
   <BUILTINS>/core.js:1349:38
   1349|     constructor(year: number, month: number, day?: number, hour?: number, minute?: number, second?: number, millisecond?: number): void;
                                              ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- date.js:20:5

Cannot call `Date` because string [1] is incompatible with number [2]. [incompatible-call]

   date.js:20:5
     20| new Date(2015, 6, '18');
             ^^^^

References:
   date.js:20:19
     20| new Date(2015, 6, '18');
                           ^^^^ [1]
   <BUILTINS>/core.js:1349:52
   1349|     constructor(year: number, month: number, day?: number, hour?: number, minute?: number, second?: number, millisecond?: number): void;
                                                            ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- date.js:21:5

Cannot call `Date` because string [1] is incompatible with number [2]. [incompatible-call]

   date.js:21:5
     21| new Date(2015, 6, 18, '11');
             ^^^^

References:
   date.js:21:23
     21| new Date(2015, 6, 18, '11');
                               ^^^^ [1]
   <BUILTINS>/core.js:1349:67
   1349|     constructor(year: number, month: number, day?: number, hour?: number, minute?: number, second?: number, millisecond?: number): void;
                                                                           ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- date.js:22:5

Cannot call `Date` because string [1] is incompatible with number [2]. [incompatible-call]

   date.js:22:5
     22| new Date(2015, 6, 18, 11, '55');
             ^^^^

References:
   date.js:22:27
     22| new Date(2015, 6, 18, 11, '55');
                                   ^^^^ [1]
   <BUILTINS>/core.js:1349:84
   1349|     constructor(year: number, month: number, day?: number, hour?: number, minute?: number, second?: number, millisecond?: number): void;
                                                                                            ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- date.js:23:5

Cannot call `Date` because string [1] is incompatible with number [2]. [incompatible-call]

   date.js:23:5
     23| new Date(2015, 6, 18, 11, 55, '42');
             ^^^^

References:
   date.js:23:31
     23| new Date(2015, 6, 18, 11, 55, '42');
                                       ^^^^ [1]
   <BUILTINS>/core.js:1349:101
   1349|     constructor(year: number, month: number, day?: number, hour?: number, minute?: number, second?: number, millisecond?: number): void;
                                                                                                             ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- date.js:24:5

Cannot call `Date` because string [1] is incompatible with number [2]. [incompatible-call]

   date.js:24:5
     24| new Date(2015, 6, 18, 11, 55, 42, '999');
             ^^^^

References:
   date.js:24:35
     24| new Date(2015, 6, 18, 11, 55, 42, '999');
                                           ^^^^^ [1]
   <BUILTINS>/core.js:1349:123
   1349|     constructor(year: number, month: number, day?: number, hour?: number, minute?: number, second?: number, millisecond?: number): void;
                                                                                                                                   ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- date.js:25:5

Cannot call `Date` because: [incompatible-call]
 - Either no arguments are expected by function type [1].
 - Or no more than 1 argument is expected by function type [2].
 - Or no more than 1 argument is expected by function type [3].
 - Or no more than 1 argument is expected by function type [4].
 - Or no more than 7 arguments are expected by function type [5].

   date.js:25:5
     25| new Date(2015, 6, 18, 11, 55, 42, 999, 'hahaha');
             ^^^^

References:
   <BUILTINS>/core.js:1345:5
   1345|     constructor(): void;
             ^^^^^^^^^^^^^^^^^^^ [1]
   <BUILTINS>/core.js:1346:5
   1346|     constructor(timestamp: number): void;
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]
   <BUILTINS>/core.js:1347:5
   1347|     constructor(date: Date): void;
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [3]
   <BUILTINS>/core.js:1348:5
   1348|     constructor(dateString: string): void;
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [4]
   <BUILTINS>/core.js:1349:5
   1349|     constructor(year: number, month: number, day?: number, hour?: number, minute?: number, second?: number, millisecond?: number): void;
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [5]


Error ----------------------------------------------------------------------------------------------------- date.js:26:5

Cannot call `Date` because string [1] is incompatible with number [2]. [incompatible-call]

   date.js:26:5
     26| new Date('2015', 6);
             ^^^^

References:
   date.js:26:10
     26| new Date('2015', 6);
                  ^^^^^^ [1]
   <BUILTINS>/core.js:1349:23
   1349|     constructor(year: number, month: number, day?: number, hour?: number, minute?: number, second?: number, millisecond?: number): void;
                               ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- date.js:31:17

Cannot add `d` and `12` because `Date` [1] is incompatible with number [2]. [incompatible-type]

   date.js:31:17
   31| var n3:number = d + 12; // expect error
                       ^

References:
   date.js:1:9
    1| var d = new Date(0);
               ^^^^^^^^^^^ [1]
   date.js:31:21
   31| var n3:number = d + 12; // expect error
                           ^^ [2]


Error ---------------------------------------------------------------------------------------------------- date.js:32:16

Cannot add `d` and `12` because `Date` [1] is incompatible with number [2]. [incompatible-type]

   date.js:32:16
   32| var s:string = d + 12; // fixme? in js this coerces both to string and concats them
                      ^

References:
   date.js:1:9
    1| var d = new Date(0);
               ^^^^^^^^^^^ [1]
   date.js:32:20
   32| var s:string = d + 12; // fixme? in js this coerces both to string and concats them
                          ^^ [2]


Error ---------------------------------------------------------------------------------------------------- date.js:32:16

Cannot assign `d + 12` to `s` because number [1] is incompatible with string [2]. [incompatible-type]

   date.js:32:16
   32| var s:string = d + 12; // fixme? in js this coerces both to string and concats them
                      ^^^^^^ [1]

References:
   date.js:32:7
   32| var s:string = d + 12; // fixme? in js this coerces both to string and concats them
             ^^^^^^ [2]



Found 14 errors

Only showing the most relevant union/intersection branches.
To see all branches, re-run Flow with --show-all-branches
